--- a/swhacademy/java/pay9um/pom.xml
+++ b/swhacademy/java/pay9um/pom.xml
@@ -2,8 +2,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>swhacadmey</groupId>
-	<artifactId>pom</artifactId>
+	<groupId>academy.swh</groupId>
+	<artifactId>pay9um</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -14,6 +14,11 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
+	<modules>
+		<module>springboot</module>
+		<module>test</module>
+	</modules>
+
 	<properties>
 		<!-- Inital setting -->
 		<java.version>1.8</java.version>
@@ -21,10 +26,10 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Dependencies version -->
 		<lombok.version>1.18.38</lombok.version>
+		<mysql.j.version>9.3.0</mysql.j.version>
 	</properties>
 
 	<dependencyManagement>
@@ -34,6 +39,11 @@
 				<artifactId>lombok</artifactId>
 				<version>${lombok.version}</version>
 				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.mysql</groupId>
+				<artifactId>mysql-connector-j</artifactId>
+				<version>${mysql.j.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -48,7 +58,7 @@
 					<version>${maven.compiler.version}</version>
 					<configuration>
 						<source>${maven.compiler.source}</source>
-						<target>${maven.compiler.target}}</target>
+						<target>${maven.compiler.target}</target>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
 				</plugin>
@@ -61,6 +71,4 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-
 </project>
-
