--- a/swhacademy/java/pay9um/springboot/src/main/resources/application.properties
+++ b/swhacademy/java/pay9um/springboot/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://183.100.18.224:3306/JunBeom?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=swhacademy!
+spring.datasource.url=jdbc:mysql://[IP]:3306/[DB]?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+spring.datasource.username=[ID]
+spring.datasource.password=[PW]
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
