--- a/swhacademy/vue3/notice/package.json
+++ b/swhacademy/vue3/notice/package.json
@@ -12,7 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
-    "bootstrap-vue-3": "^0.5.1",
+    "bootstrap-icons": "^1.13.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
