--- a/swhacademy/java/MavenProject/springboot/src/main/resources/application.yml
+++ b/swhacademy/java/MavenProject/springboot/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     username: root
     password: swhacademy!
     driver-class-name: com.mysql.cj.jdbc.Driver
+  devtools:
+    restart:
+      enabled: true
+      additional-exclude: static
 
   jpa:
     database: mysql
